# SmtpAuth

./: CMakeLists.txt  README.md
include/SmtpAuth/: Client.hpp
src/: Client.cpp
test/: CMakeLists.txt
test/src/: ClientTests.cpp
